Fixed bottom container to stretch

--- a/style.css
+++ b/style.css
@@ -82,10 +82,10 @@ p {
 }
 
 .reasons {
+  flex: auto;
   background-color: var(--primary-1);
   color: var(--neutral-1);
   opacity: 0.9;
-  color: #fff;
 }
 
 /* button */
